# Hybrid_JASSS

./: README.md  abm_to_abm.ipynb  agent_based_model.py  hybrid_abm_to_networks.py  hybrid_abm_to_seir.py  main_pool.py  networks_to_seir.ipynb  networks_with_alpha_gamma_fixed.ipynb  pyproject.toml  seir_to_seir.py  shareable.ipynb  working_hand_implementation.ipynb
